[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[replace]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     "<crate>:<version>" = { path = "/path/to/local/checkout" }
"html5ever:0.16.0" = { git = "https://github.com/servo/html5ever", rev = "lolreplace" }
"xml5ever:0.6.0" = { git = "https://github.com/servo/html5ever", rev = "lolreplace" }
